# tree-classification

./: .gitignore  CHANGELOG.md  CLAUDE.md  pyproject.toml
.github/: copilot-instructions.md
data/boundaries/: city_boundaries.gpkg  city_boundaries_500m_buffer.gpkg
data/processed/: chm_statistics.csv
data/validation/: chm_quality_stats.csv  chm_resampling_extended_report.csv  crs_verification_report.csv  s2_quality_stats.csv  tree_raster_alignment.csv  validation_report.md  validation_summary.json
docs/: IMPROVEMENTS_ROADMAP.md  PROJEKT_KONTEXT.md  Projektdesign.json  Städte Datensätze.md  Städteauswahl.json
docs/documentation/: 01_Datenakquise_Methodik.md  02_Baumkataster_Methodik.md  02_CHM_Berechnung_Methodik.md  03_Sentinel2_Methodik.md  04_Baumkataster_Methodik.md  04_Hoehendaten_DOM_DGM_Methodik.md  05_Baumfilterung_Methodik.md  05_CHM_Erstellung_Methodik.md  METHODOLOGY_OVERVIEW.md  TEMPLATE_METHODIKDOKUMENT.md  aggregate_docs.py
docs/documentation/00_Projektdesign_und_Methodik/: 01_Projektübersicht.md  02_Methodische_Grundlagen.md  03_Datapipeline_Architektur.md  99_Methodische_Verbesserungen.md
docs/documentation/01_Data_Processing/: 01_Stadtgrenzen_Methodik.md  02_Baumkataster_Methodik.md  03_Hoehendaten_DOM_DGM_Methodik.md  04_CHM_Erstellung_Methodik.md  05_CHM_Resampling_Methodik.md  06_Sentinel2_Verarbeitung_Methodik.md  07_Baumkorrektur_Methodik.md  99_Methodische_Verbesserungen.md
docs/documentation/02_Feature_Engineering/: 01_Feature_Loading_Extraction_Methodik.md  02_Feature_Validation_Quality_Control_Methodik.md  03_Dataset_Balancing_Class_Stratification_Methodik.md  04_Spatial_Block_Split_Train_Val_Stratification_Methodik.md  05_Feature_Normalization_Model_Ready_Export_Methodik.md  README.md
docs/documentation/03_Model_Training/: 01_Experimentstrategie_Methodik.md
notebooks/: 01_EDA_CHM_Creation.ipynb  TEMPLATE_NOTEBOOK.ipynb
notebooks/01_processing/: 01_tree_correction.ipynb  02_sentinel2_gee_download.ipynb  03_chm_resampling.ipynb
notebooks/02_feature_engineering/: 01_feature_extraction.ipynb  02_data_quality_control.ipynb  02_quality_control.ipynb  03_class_balancing.ipynb  03a_temporal_feature_selection_JM.ipynb  03b_nan_handling_plausibility.ipynb  03c_chm_relevance_assessment.ipynb  03d_correlation_analysis.ipynb  03e_outlier_detection.ipynb  04_spatial_splits.ipynb  05_normalization.ipynb
notebooks/03_experiments/00_phase_0/: 01_experiment_chm.ipynb  02_experiment_dataset.ipynb  03_experiment_features.ipynb
scripts/: 01_download_elevation_data.py  README.md  config.py  validate_elevation.py
scripts/boundaries/: download_city_boundaries.py
scripts/chm/: analyze_chm_distribution.py  create_chm.py  harmonize_chm.py  resample_chm.py
scripts/elevation/: harmonize_elevation.py  validate_elevation.py
scripts/sentinel2/: download_sentinel2.py  validate_coverage.py
scripts/tree_cadastres/: download_tree_cadastres.py  filter_trees.py  harmonize_tree_cadastres.py
scripts/validation/: validate_data.py
scripts/visualization/: visualize_trees_on_chm.py
(+14 files in other folders)
