[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "openeo>=0.46.0",
    "owslib>=0.35.0",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.0",
    "nox>=2024.10.9",
    "pyrefly>=0.1.0",
    "ruff>=0.14.7",
]
