[project]
name = "tree-classification"
version = "0.1.0"
description = "Cross-city tree species classification using Sentinel-2 and CHM data"
authors = [
    {name = "Silas Pignotti"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["remote-sensing", "tree-classification", "sentinel-2", "machine-learning", "urban-forestry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "earthengine-api>=1.7.4",
    "geemap>=0.36.6",
    "geopandas>=1.1.1",
    "matplotlib>=3.7.0",
    "rasterio>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
]

[project.urls]
Repository = "https://github.com/SilasPignotti/tree-classification"
Documentation = "https://github.com/SilasPignotti/tree-classification/tree/main/docs/documentation"
